# proto_demo

./: .cathedral-keeper.json  .dockerignore  .env.example  .gitignore  Procfile  README.md  nixpacks.toml  procedure_cpt_updates.csv  procedure_library_export.csv  pyproject.toml  railway.json  requirements.txt  start.py  starter.md  unmapped_procedures.csv
.benchmarks/: baseline_v4.json  benchmark.json  benchmark_report.html  multi_protocol_benchmark.json  version_benchmark_full.json  version_comparison.json
.claude/: settings.json
api/: main.py
data/: procedure_exclusions.json  procedure_hierarchies.json  procedure_mapping.csv  procedure_protocol_linkage.json
data_seed/: procedure_exclusions.json  procedure_mapping.csv
docs/: FMV_Feature_Plan.md  Formatting_Enhancement_Plan.md  Phase_Delivery_Report.md  Pipeline_Gaps_and_Roadmap.md  ProtoExtract_Technical_Report.md  Section_Parsing_Verbatim_Technical_Review.md  Test_Configuration.md  cathedral_keeper_analysis.md  delivery_report_22_march.md  evaluation_approach.md  external_code_assessment.md  implementation_plan.md  pipeline_efficacy_report.md  pipeline_status_report_22_march.md  protocol_workspace_ui.md  red_team_section_parsing.md  research_comparison_and_path_forward.md  section_verbatim_test_report.md  technical_overview.md
feedback/: sync.sh
golden_set/: evaluate.py  protocol_registry.md  registry.json
output/: P09_extraction.json  P09_extraction_v2.json  P09_extraction_v3.json  P09_extraction_v4.json  P09_extraction_v5.json  P14_extraction.json  P14_extraction_v2.json  P14_extraction_v3.json  (+28 more)
(+363 files in other folders)
