[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "proto-table-extractor"
version = "0.1.0"
description = "Protocol table extraction pipeline for pharma site budgeting"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "anthropic>=0.40",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "streamlit>=1.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["src*"]
